# FIWARE-based-Architecture-for-SLEC

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
docker/: delete-all-subs-iot.py  docker-compose.yml  grafana-dashboard.json  list-all-entities-iot.py  subscibe.py
docker/data-models/: ngsi-context.jsonld
docker/docker-python/: Dockerfile  listener.py  optimizer.py
docker/mosquitto/: mosquitto.conf
docker/provision/: 00_lec_entities_part_1.sh  01_lec_entities_part_2.sh  02_service_group_wwt.sh  03_service_group_pv.sh  04_service_group_em.sh  05_provision_pv.sh  06_provision_em.sh  07_provision_wwt.sh  08_subscribe_optimizer_pv.sh  09_subscribe_ql_wwt.sh  11_subscribe_ql_em.sh
src/: collector.py  controller.py  fiware_to_mosaik.py  mosaik_to_fiware.py  mosaik_to_mqtt.py  mqtt_to_mosaik.py  progress_reporter.py  scenario.py  solar_model.py  stat_collector.py  wwt_model.py  wwt_simulator.py
src/Data/: HotWaterUsageCHR16.csv  HotWaterUsageCHR27.csv  HotWaterUsageCHR45.csv  HotWaterUsageCHS01.csv  HouseElectricityCHR16.csv  HouseElectricityCHR27.csv  HouseElectricityCHR45.csv  HouseElectricityCHS01.csv  WaterData.csv
